--- a/index.html
+++ b/index.html
@@ -15,193 +15,200 @@
     <script>
         $(document).ready(function () {
             const d = console.log;
-
-
-            setTimeout(() => {
-                var logar = (nome, cpf) => {
-
-                    obSol.cpf = cpf;
-                    obSol.nome = nome;
-
-                    class Logado extends React.Component {
-                        constructor(props) {
-                            super(props);
-                            this.state = { cpf: cpf, nome: nome }
-
-                        }
-
-                        render() {
-
-                            return e('span', { key: 'logad' }, 'Seja bem vindo, ' + this.state.nome + ' - ' + this.state.cpf)
-                        }
-                    }
-
-                    const domContainer = document.querySelector('#logado');
-                    ReactDOM.render(e(Logado), domContainer);
-                };
-                logar(logado.nome, logado.cpf);
-
-            }, 2000)
-
+            var DataSolicitacao;
 
             axios
-                .get("http://127.0.0.1:8049/webrunstudio/ZServicoBuscarSolicitacoes.rule?sys=CCU&CPF=07658259705")
+                .get("http://127.0.0.1:8049/webrunstudio/ZServicoBuscarUsuario.rule?sys=CCU")
                 .then(response => {
+                    const logado = response.data.dados[0]
 
-                    let res = response.data.dados;
+                    var logar = (nome, cpf) => {
 
-                    if(!res){
-                        res = [];
-                    }
+                        obSol.cpf = cpf;
+                        obSol.nome = nome;
 
-                    res.forEach(
-                        (a, b, c) => {
-                            a.DataSolicitacaoDevolucao = 'Data de Solicitação: ' + moment(a.DataSolicitacaoDevolucao).format('DD/MM/YYYY');
-                            a.StatusSolciitacao = 'Status atual: ' + a.StatusSolciitacao;
-                            a.pos = b + 1;
-                            a.total = d.length;
-
-                            if (b === 0) {
-                                a.className = 'slide active'
-                            } else {
-                                a.className = 'slide'
-                            }
-
-                            a.pos = b + 1;
-                            a.total = c.length;
-                        }
-                    );
-
-
-                    var slides = () => {
-
-                        class Cards extends React.Component {
+                        class Logado extends React.Component {
                             constructor(props) {
                                 super(props);
+                                this.state = { cpf: cpf, nome: nome }
 
-                                this.state = {
-                                    conteudo: res,
-                                    pos: 0
-                                }
-
-                                this.selectCard = this.selectCard.bind(this);
-                                this.voltar = this.voltar.bind(this);
-                                this.avancar = this.avancar.bind(this);
-
-                            }
-
-                            selectCard = (pos) => {
-                                return this.state.conteudo[pos];
-                            }
-
-                            voltar = () => {
-                                let aux = 1;
-                                if (this.state.pos === 0) {
-                                    aux = 0
-                                }
-                                this.setState({ pos: this.state.pos - aux })
-                            }
-
-                            avancar = () => {
-                                let tamanho = this.state.conteudo.length;
-                                let aux = 1;
-                                if (this.state.pos === tamanho - 1) {
-                                    aux = 0
-                                }
-                                this.setState({ pos: this.state.pos + aux })
-                            }
-
-                            componentDidMount() {
-                                $('#avancar').click(this.avancar);
-
-                                $('#voltar').click(this.voltar)
-
-                                if (this.state.conteudo.length === 0) {
-                                    $('#footer-card').hide();
-                                } else {
-                                    $('#footer-card').show();
-                                }
-                            }
-
-
-
-                            render() {
-                                let a = this.selectCard(this.state.pos);
-
-                                if (this.state.conteudo.length === 0) {
-                                    return e('span', { key: Math.random(), className: 'datasolicitacao' }, 'Ainda sem solicitações');
-                                }
-
-
-                                return e('div', { key: Math.random(), id: 'divCards' }, [
-                                    e('span', { key: Math.random(), className: 'datasolicitacao' }, a.DataSolicitacaoDevolucao),
-                                    e('span', { key: Math.random(), className: 'statussolicitacao' }, a.StatusSolciitacao),
-                                    e('span', { key: Math.random(), className: 'paginacards' }, a.pos + ' de ' + a.total),
-                                    e('div', { key: Math.random(), className: 'divButtonListas' }, e('button', { key: Math.random(), className: 'btn btn-light btn-lg btn-block', onClick: () => buscarSolicitacao(a.idSolicitacaoMercadoria) }, 'Consultar'))
-                                ])
-                            }
-                        }
-
-                        const domContainer = document.querySelector('#conteudo-card');
-                        ReactDOM.render(e(Cards), domContainer);
-                    }
-
-                    var listas = () => {
-
-                        class Listas extends React.Component {
-                            constructor(props) {
-                                super(props);
-
-                                this.state = {
-                                    conteudo: res,
-                                    pos: 0
-                                }
-
-                                this.selectLista = this.selectLista.bind(this);
-                            }
-
-
-                            selectLista = (pos) => {
-                                return this.state.conteudo[pos];
-                            }
-
-                            componentDidMount() {
                             }
 
                             render() {
-                                let a = this.selectLista(this.state.pos);
 
-                                if (this.state.conteudo.length === 0) {
-                                    return e('span', { key: Math.random(), className: 'datasolicitacao' }, 'Ainda sem solicitações');
-                                }
-
-                                let arrlistas = []
-
-                                this.state.conteudo.forEach(a => {
-                                    let arr = []
-                                    arr.push(e('span', { key: Math.random(), className: 'datasolicitacao' }, a.DataSolicitacaoDevolucao));
-                                    arr.push(e('span', { key: Math.random(), className: 'statussolicitacao' }, a.StatusSolciitacao));
-                                    arr.push(e('span', { key: Math.random(), className: 'paginacards' }, a.pos + ' de ' + a.total))
-                                    arr.push(e('div', { key: Math.random(), className: 'divButtonListas' }, e('button', { key: Math.random(), className: 'btn btn-light btn-lg btn-block', onClick: () => buscarSolicitacao(a.idSolicitacaoMercadoria) }, 'Consultar')))
-                                    let divBody = e('div', { key: Math.random(), className: 'divlistas' }, arr);
-                                    arrlistas.push(divBody);
-                                })
-                                return e('div', { key: Math.random() }, arrlistas);
+                                return e('span', { key: 'logad' }, 'Seja bem vindo, ' + this.state.nome + ' - ' + this.state.cpf)
                             }
                         }
 
-                        const domContainer = document.querySelector('#listas');
-                        ReactDOM.render(e(Listas), domContainer);
-                    }
+                        const domContainer = document.querySelector('#logado');
+                        ReactDOM.render(e(Logado), domContainer);
+                    };
+                    logar(logado.NOME, logado.CPF);
+
+                    axios
+                        .get("http://127.0.0.1:8049/webrunstudio/ZServicoBuscarSolicitacoes.rule?sys=CCU&CPF=" + obSol.cpf)
+                        .then(response => {
+
+                            let res = response.data.dados;
+
+                            if (!res) {
+                                res = [];
+                            }
+
+                            res.forEach(
+                                (a, b, c) => {
+                                    DataSolicitacao = moment(a.DataSolicitacaoDevolucao).format('DD/MM/YYYY');
+                                    a.DataSolicitacaoDevolucao = 'Data de Solicitação: ' + moment(a.DataSolicitacaoDevolucao).format('DD/MM/YYYY');
+                                    a.StatusSolciitacao = 'Status atual: ' + a.StatusSolciitacao;
+                                    a.pos = b + 1;
+                                    a.total = d.length;
+
+                                    if (b === 0) {
+                                        a.className = 'slide active'
+                                    } else {
+                                        a.className = 'slide'
+                                    }
+
+                                    a.pos = b + 1;
+                                    a.total = c.length;
+                                }
+                            );
 
 
-                    slides();
-                    listas();
+                            var slides = () => {
+
+                                class Cards extends React.Component {
+                                    constructor(props) {
+                                        super(props);
+
+                                        this.state = {
+                                            conteudo: res,
+                                            pos: 0
+                                        }
+
+                                        this.selectCard = this.selectCard.bind(this);
+                                        this.voltar = this.voltar.bind(this);
+                                        this.avancar = this.avancar.bind(this);
+
+                                    }
+
+                                    selectCard = (pos) => {
+                                        return this.state.conteudo[pos];
+                                    }
+
+                                    voltar = () => {
+                                        let aux = 1;
+                                        if (this.state.pos === 0) {
+                                            aux = 0
+                                        }
+                                        this.setState({ pos: this.state.pos - aux })
+                                    }
+
+                                    avancar = () => {
+                                        let tamanho = this.state.conteudo.length;
+                                        let aux = 1;
+                                        if (this.state.pos === tamanho - 1) {
+                                            aux = 0
+                                        }
+                                        this.setState({ pos: this.state.pos + aux })
+                                    }
+
+                                    componentDidMount() {
+                                        $('#avancar').click(this.avancar);
+
+                                        $('#voltar').click(this.voltar)
+
+                                        if (this.state.conteudo.length === 0) {
+                                            $('#footer-card').hide();
+                                        } else {
+                                            $('#footer-card').show();
+                                        }
+                                    }
 
 
 
+                                    render() {
+                                        let a = this.selectCard(this.state.pos);
+
+                                        if (this.state.conteudo.length === 0) {
+                                            return e('span', { key: Math.random(), className: 'datasolicitacao' }, 'Ainda sem solicitações');
+                                        }
+
+
+                                        return e('div', { key: Math.random(), id: 'divCards' }, [
+                                            e('span', { key: Math.random(), className: 'datasolicitacao' }, a.DataSolicitacaoDevolucao),
+                                            e('span', { key: Math.random(), className: 'statussolicitacao' }, a.StatusSolciitacao),
+                                            e('span', { key: Math.random(), className: 'paginacards' }, a.pos + ' de ' + a.total),
+                                            e('div', { key: Math.random(), className: 'divButtonListas' }, e('button', { key: Math.random(), className: 'btn btn-light btn-lg btn-block', onClick: () => buscarSolicitacao(a.idSolicitacaoMercadoria) }, 'Consultar'))
+                                        ])
+                                    }
+                                }
+
+                                const domContainer = document.querySelector('#conteudo-card');
+                                ReactDOM.render(e(Cards), domContainer);
+                            }
+
+                            var listas = () => {
+
+                                class Listas extends React.Component {
+                                    constructor(props) {
+                                        super(props);
+
+                                        this.state = {
+                                            conteudo: res,
+                                            pos: 0
+                                        }
+
+                                        this.selectLista = this.selectLista.bind(this);
+                                    }
+
+
+                                    selectLista = (pos) => {
+                                        return this.state.conteudo[pos];
+                                    }
+
+                                    componentDidMount() {
+                                    }
+
+                                    render() {
+                                        let a = this.selectLista(this.state.pos);
+
+                                        if (this.state.conteudo.length === 0) {
+                                            return e('span', { key: Math.random(), className: 'datasolicitacao' }, 'Ainda sem solicitações');
+                                        }
+
+                                        let arrlistas = []
+
+                                        this.state.conteudo.forEach(a => {
+                                            let arr = []
+                                            arr.push(e('span', { key: Math.random(), className: 'datasolicitacao' }, a.DataSolicitacaoDevolucao));
+                                            arr.push(e('span', { key: Math.random(), className: 'statussolicitacao' }, a.StatusSolciitacao));
+                                            arr.push(e('span', { key: Math.random(), className: 'paginacards' }, a.pos + ' de ' + a.total))
+                                            arr.push(e('div', { key: Math.random(), className: 'divButtonListas' }, e('button', { key: Math.random(), className: 'btn btn-light btn-lg btn-block', onClick: () => buscarSolicitacao(a.idSolicitacaoMercadoria) }, 'Consultar')))
+                                            let divBody = e('div', { key: Math.random(), className: 'divlistas' }, arr);
+                                            arrlistas.push(divBody);
+                                        })
+                                        return e('div', { key: Math.random() }, arrlistas);
+                                    }
+                                }
+
+                                const domContainer = document.querySelector('#listas');
+                                ReactDOM.render(e(Listas), domContainer);
+                            }
+
+
+                            slides();
+                            listas();
+
+
+
+                        })
+                        .catch(error => console.log(error));
                 })
                 .catch(error => console.log(error));
+
+
+
 
         });
 
@@ -229,7 +236,7 @@
             <p>Faça uma nova solicitação no botão de “Nova Solicitação” ou selecione uma das solicitações anteriores
                 para acompanhar seu andamento.
             </p>
-            <span class="alerta">O solicitante tem até 7 dias para requerer a devolução de suas mercadorias. Após
+            <span class="alerta">O solicitante tem até 5 dias úteis para requerer a devolução de suas mercadorias. Após
                 esse prazo, as
                 mercadorias não poderão mais ser devolvidas e deverão ser descartadas, doadas ou leiloadas.
             </span>
